--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "eslint-plugin-react": "^7.30.0",
     "jquery": "^3.6.0",
     "react": "^18.1.0",
+    "react-auth-kit": "^2.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.3",
     "reactstrap": "^9.0.3",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
@@ -47,6 +52,7 @@
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "sass": "^1.54.0"
   }
 }
